GNOME Bugzilla – Bug 675923
Option to set columns at powers of two doesn't work on startup
Last modified: 2016-03-03 18:05:12 UTC
I've enable the “power of two” columns because it's easier for me find characters this way. However, when I start GUCharmap, this option is not respected (but shown as enabled). I need to disable it and reenable it for it to work correctly.
I’m also seeing this bug with version 3.18.2.
Fixed on master.