charmap: Read the snap-cols-pow2 setting on startup

https://bugzilla.gnome.org/show_bug.cgi?id=675923